# sicat-sentry-node

./: .gitignore  README.md  certification_check.js  event_ledger.js  fhibe_connector.py  index.html  sentry_engine.js  trigger_slashing.js
api/: server.js
fhibe_evaluation_api-main/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
fhibe_evaluation_api-main/.github/: PULL_REQUEST_TEMPLATE.md
fhibe_evaluation_api-main/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml
fhibe_evaluation_api-main/.github/workflows/: ci-tests.yaml  lint.yaml
fhibe_evaluation_api-main/demo/body_parts_detection/: body_parts_detection.yaml  run_body_parts_detection_demo.py
fhibe_evaluation_api-main/demo/face_encoding/: face_encoding.yaml  run_face_encoding_demo.py
fhibe_evaluation_api-main/demo/face_localization/: face_localization.yaml  run_face_localization_demo.py
fhibe_evaluation_api-main/demo/face_parsing/: face_parsing.yaml  run_face_parsing_demo.py
fhibe_evaluation_api-main/demo/face_super_resolution_demo/: face_super_resolution.yaml  run_face_super_resolution_demo.py
fhibe_evaluation_api-main/demo/face_verification/: face_verification.yaml  run_face_verification_demo.py  utils.py  verifier.py
fhibe_evaluation_api-main/demo/keypoint_estimation/: keypoint_estimation.yaml  run_keypoint_estimation_demo.py
fhibe_evaluation_api-main/demo/person_localization/: person_localization.yaml  run_person_localization_demo.py
fhibe_evaluation_api-main/demo/person_parsing/: person_parsing.yaml  run_person_parsing_demo.py
fhibe_evaluation_api-main/docs/: supported_attributes.md  task_specifics.md
fhibe_evaluation_api-main/fhibe_eval_api/: __init__.py
fhibe_evaluation_api-main/fhibe_eval_api/common/: data.py  loaders.py  loggers.py  metrics.py  utils.py
fhibe_evaluation_api-main/fhibe_eval_api/datasets/: fhibe.py  fhibe_face.py  utils.py
fhibe_evaluation_api-main/fhibe_eval_api/evaluate/: __init__.py  constants.py  evaluate.py  utils.py
fhibe_evaluation_api-main/fhibe_eval_api/metrics/: __init__.py  constants.py  fhibe_metrics.py  utils.py
fhibe_evaluation_api-main/fhibe_eval_api/metrics/face_parsing/: __init__.py  utils.py
fhibe_evaluation_api-main/fhibe_eval_api/metrics/face_verification/: __init__.py  matlab_cp2tform.py  utils.py
fhibe_evaluation_api-main/fhibe_eval_api/metrics/keypoint_estimation/: __init__.py  keypoints.py
fhibe_evaluation_api-main/fhibe_eval_api/models/: __init__.py  base_model.py
fhibe_evaluation_api-main/fhibe_eval_api/reporting/: __init__.py  reporting.py  utils.py
fhibe_evaluation_api-main/tests/: conftest.py  generate_keypoint_area_masks.py  generate_person_parsing_masks.py  make_fake_downsampled_images.py  make_fake_face_encodings.py  make_fake_face_images.py  make_fake_face_masks.py  make_fake_model_outputs.py  make_fake_super_res_images.py  models.py  test_evaluate_task.py  test_fhibe_metrics.py  test_metric_utils.py  test_reporting.py  test_utils.py
frontend/: index.html
sicat_protocol/programs/sicat_protocol/: Cargo.toml
sicat_protocol/programs/sicat_protocol/src/: lib.rs
supabase/: config.toml
(+21 files in other folders)
